--- a/presentation/presentation.tex
+++ b/presentation/presentation.tex
@@ -72,11 +72,11 @@ Level 5, 158 Victoria St, Wellington \\
 
 \begin{frame}
 \titlepage
-%\vspace{-1.5cm}
-% \begin{center}
-% \resizebox{!}{3.4cm}{\hspace{-1.2cm} \includegraphics[width=1.2\textwidth]{figures/birds_fishing.jpg}}
-% \end{center}
-% \vspace{-2cm}
+\vspace{-1.5cm}
+ \begin{center}
+ \resizebox{!}{2cm}{\includegraphics[width=1.2\textwidth]{images/damselfly.png}}
+ \end{center}
+ \vspace{-2cm}
 \end{frame}
 
 
